# LR5

./: CMakeLists.txt  README.md  build.bat  build_task4.bat  simple_test_task5.cpp
task1/: CMakeLists.txt  cmd  task_1.cpp
task1/include/: MatrixDLL.h
task1/src/: MatrixDLL.cpp  task_1.cpp  testfunc.cpp
task1/tests/: test_task1.cpp  test_task1_simple.cpp
task2/: CMakeLists.txt  cmd  task_2.cpp
task2/include/: RecDLL.h  Test.h
task2/src/: RecDLL.cpp  task_2.cpp  testfunc.cpp
task2/tests/: test_task2.cpp  test_task2_simple.cpp
task3/: CMakeLists.txt  cmd  task_3.cpp
task3/include/: MatrixDLL.h  Test.h
task3/lib/: gtest_main.lib
task3/src/: MatrixDLL.cpp  task_3.cpp  testfunc.cpp
task3/tests/: test_task3.cpp
task4/: CMakeLists,txt  cmd  task_4.cpp
task4/include/: MatrixDLL.h  Test.h
task4/src/: MatrixDLL.cpp  task_4.cpp  testfunc.cpp
task4/tests/: test_task4.cpp
task5/: cmd  task_5.cpp
task5/include/: MatrixDLL.h  Test.h
task5/src/: MatrixDLL.cpp  task_5.cpp  testfunc.cpp
task5/tests/: test_task5.cpp
